--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -25,9 +25,9 @@
                 <li class="nav-item">
                 <a class="nav-link nav-item nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
                 </li>
-                <li class="nav-item">
+                <!-- <li class="nav-item">
                 <a class="nav-link nav-item nav-link" href="{{ url_for('about') }}">About</a>
-                </li>
+                </li> -->
                 {% if current_user.is_authenticated %}
                 <a href="{{ url_for('new_post') }}" class="nav-item nav-link">New Post</a>
                 {% endif %}
@@ -46,7 +46,7 @@
     </nav>
     <main role="main" class="container">
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-12">
                 {% with messages = get_flashed_messages(with_categories=true ) %}
                     {% if messages %}
                         {% for category, message in messages %}
@@ -58,12 +58,7 @@
                 {% endwith %}
                 {% block content %}{% endblock %}
             </div>
-            <div class="col-md-4">
-                <div class="content-section">  
-                    <p class="h1">{{ title }}</p>
-                    <p class="text-muted">lorem ipsum</p>
-                </div>
-            </div>
+
         </div>
     </main>
 
