--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
     {% if title %}
-        <title>Flask Blog - {{ title }}</title>
+        <title>Space Blog - {{ title }}</title>
     {% else %}
-        <title>Flask Blog</title>
+        <title>Space Blog</title>
     {% endif %}
     <!-- Required meta tags -->
     <meta charset="utf-8">
@@ -17,7 +17,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-custom px-3 fixed-top">
         <div class="container">
-            <a class="navbar-brand" href="/">Flask Blog</a>
+            <a class="navbar-brand" href="/">Space Blog</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span></button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -28,13 +28,11 @@
                 <!-- <li class="nav-item">
                 <a class="nav-link nav-item nav-link" href="{{ url_for('about') }}">About</a>
                 </li> -->
-                {% if current_user.is_authenticated %}
-                <a href="{{ url_for('new_post') }}" class="nav-item nav-link">New Post</a>
-                {% endif %}
                 </ul>
             <div class="navbar-nav d-flex">
                 {% if current_user.is_authenticated %}
-                    <a href="{{ url_for('account') }}" class="nav-item nav-link">Account</a>
+                    <a href="{{ url_for('new_post') }}" class="nav-item nav-link">New Post</a>
+                    <a href="{{ url_for('account') }}" class="nav-item nav-link">My Account</a>
                     <a href="{{ url_for('logout') }}" class="nav-item nav-link">Logout</a>
                 {% else %}
                     <a href="{{ url_for('login') }}" class="nav-item nav-link">Login</a>
@@ -58,6 +56,7 @@
                 {% endwith %}
                 {% block content %}{% endblock %}
             </div>
+
 
         </div>
     </main>
