--- a/flaskblog/templates/user_posts.html
+++ b/flaskblog/templates/user_posts.html
@@ -1,5 +1,6 @@
 {% extends "layout.html" %}
 {% block content %}
+    <h1 class="m-3">Posts by {{ user.username }} ({{ posts.total }})</h1>
     {% for post in posts.items %}
     <article class="media content-section">
         <div class="d-flex">
@@ -11,14 +12,14 @@
             <p class="article-content">{{ post.content }}</p>
             </div>
         </div>
-    </article> 
+    </article>
     {% endfor %}
     {% for page_number in posts.iter_pages(left_edge=1, right_edge=1, left_current=1, right_current=3) %}
         {% if page_number  %}
             {% if posts.page == page_number  %}
-                <a class="btn btn-info mb-5" href="{{ url_for('home', page=page_number) }}">{{ page_number }}</a>
+                <a class="btn btn-info mb-5" href="{{ url_for('user_posts', username=user.username, page=page_number) }}">{{ page_number }}</a>
             {% else %}
-                <a class="btn btn-outline-info mb-5" href="{{ url_for('home', page=page_number) }}">{{ page_number }}</a>
+                <a class="btn btn-outline-info mb-5" href="{{ url_for('user_posts', username=user.username, page=page_number) }}">{{ page_number }}</a>
             {% endif %}
         {% else %}
             ...
