--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -1,5 +1,14 @@
 {% extends "layout.html" %}
 {% block content %}
+<div class="row">
+    <div style="background-image: url('static/img/placeholder.jpg')" class="p-4 p-md-5 mb-4 text-white rounded bg-dark">
+        <div class="col-md-10 px-0">
+            <h2 class="display-5 text-white">James Webb Space Telescope Finds Oldest Galaxy</h1>
+            <p class="lead my-3">Multiple lines of text that form the lede, informing new readers quickly and efficiently about what’s most interesting in this post’s contents.</p>
+            <p class="btn btn-outline-primary"><a href="#" class="text-white fw-bold">Continue reading...</a></p>
+        </div>
+    </div>
+</div>
     {% for post in posts.items %}
     <article class="media content-section">
         <div class="d-flex">
