--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -7,6 +7,7 @@
         <title>Space Blog</title>
     {% endif %}
     <!-- Required meta tags -->
+    <link rel="icon" type="image/png" href="static/img/favicon.png" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS v5.2.0-beta1 -->
@@ -25,9 +26,9 @@
                 <li class="nav-item">
                 <a class="nav-link nav-item nav-link" aria-current="page" href="{{ url_for('home') }}">Home</a>
                 </li>
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                 <a class="nav-link nav-item nav-link" href="{{ url_for('about') }}">About</a>
-                </li> -->
+                </li>
                 </ul>
             <div class="navbar-nav d-flex">
                 {% if current_user.is_authenticated %}
@@ -44,7 +45,7 @@
     </nav>
     <main role="main" class="container">
         <div class="row">
-            <div class="col-md-12">
+            <div class="col-md-8">
                 {% with messages = get_flashed_messages(with_categories=true ) %}
                     {% if messages %}
                         {% for category, message in messages %}
@@ -56,13 +57,48 @@
                 {% endwith %}
                 {% block content %}{% endblock %}
             </div>
-
-
+            <div class="col-md-4">
+                <div class="card" style="width: 22rem;">
+                    <img src="..." class="card-img-top" alt="Nasa Photo of the Day" id="nasa">
+                    <div class="card-body">
+                        <p class="card-text h3" id="title"></p>
+                        <p class="card-text">NASA's photo of the day API is an excellent tool for...</p>
+                        <a href="#" class="btn btn-primary">Learn More</a>
+                    </div>
+                </div>
+                <div class="p-4">
+                    <h4 class="fst">Archives</h4>
+                    <ol class="list-unstyled mb-0">
+                        <li><a href="#">July 2022</a></li>
+                        <li><a href="#">June 2022</a></li>
+                        <li><a href="#">May 2022</a></li>
+                        <li><a href="#">April 2022</a></li>
+                        <li><a href="#">March 2022</a></li>
+                        <li><a href="#">February 2022</a></li>
+                        <li><a href="#">January 2022</a></li>
+                        <li><a href="#">December 2021</a></li>
+                        <li><a href="#">November 2021</a></li>
+                        <li><a href="#">October 2021</a></li>
+                        <li><a href="#">September 2021</a></li>
+                        <li><a href="#">August 2021</a></li>
+                    </ol>
+                </div>
+                <div class="p-4">
+                    <h4 class="fst">Connect</h4>
+                    <ol class="list-unstyled">
+                    <li><a href="https://github.com/garrettclough">GitHub</a></li>
+                    <li><a href="https://linkedin.com/garrettclough">LinkedIn</a></li>
+                    </ol>
+                </div>
+                </div>
+            </div>
         </div>
     </main>
 
     <!-- Bootstrap JavaScript Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+    <!-- Custom JS -->
+    <script src="static/js/main.js"></script>
 </body>
 </html>
